# lichen

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  MAINNET_READINESS_EXECUTION_TRACKER_2026-04-25.md  MAINNET_READINESS_FULL_PASS_PLAN_2026-04-25.md  Makefile  README.md  SECURITY.md  SESSION_HANDOVER_MAINNET_READINESS_2026-04-25.md  SKILL.md  config.toml  deny.toml  docker-compose.yml  lichen-start.sh  package-lock.json  package.json  reset-blockchain.sh  run-validator.sh  seeds.json  signed-metadata-manifest-testnet.json
.cargo/: audit.toml
cli/: Cargo.toml
compiler/: Cargo.toml  Dockerfile.sandbox
core/: Cargo.toml
custody/: Cargo.toml
deploy/: Caddyfile.common  Caddyfile.mainnet  Caddyfile.mainnet-us  Caddyfile.testnet  Caddyfile.testnet-custody-forwarder  Caddyfile.testnet-custody-local  Caddyfile.testnet-us  custody-env-mainnet.example  custody-env.example  custody-route-profile.md  env-mainnet.example  env-testnet.example  faucet-env.example  lichen-validator.service  mainnet-launch-runbook.md  release-trust-anchor.json  setup.sh  sparse-state-commitment-rollout.md
developers/: _headers  architecture.html  changelog.html  cli-reference.html  contract-reference.html  contracts.html  exchange-integration.html  getting-started.html  index.html  lichenid.html  rpc-reference.html  sdk-js.html  sdk-python.html  sdk-rust.html  shared-config.js  validator.html  ws-reference.html  zk-privacy.html
dex/: _headers  dex.css  dex.js  index.html
exchanges/: _headers  index.html
explorer/: _headers  address.html  agents.html  block.html  blocks.html  contract.html  contracts.html  explorer.css  index.html  privacy.html  (+4 more)
sdk/python/: README.md  adversarial_security_test.py  deep_stress_test.py  e2e_agent_test.py  financial_attack_test.py  generate_wallet.py  production_audit.py  pyproject.toml  requirements-release.in  requirements.txt  send_signed_transaction.py  send_test_transactions.py  setup.py  test_bincode.py  test_bountyboard.py  test_connection_cleanup.py  test_cross_sdk_compat.py  test_keypair.py  test_lichenid.py  test_lichenswap.py  test_restrictions_client.py  test_sdk_live.py  test_sporepay.py  test_sporevault.py  test_thalllend.py  test_websocket_sdk.py  test_websocket_simple.py
sdk/python/examples/: generate_transactions.py
sdk/python/lichen/: __init__.py  bincode.py  bountyboard.py  connection.py  keypair.py  lichenid.py  lichenswap.py  pq.py  publickey.py  restrictions.py  shielded.py  sporepay.py  sporevault.py  thalllend.py  transaction.py
(+1001 files in other folders)
