[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lichen-sdk"
version = "1.0.0"
description = "Official Python SDK for Lichen blockchain"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Lichen Labs", email = "hello@lichen.network" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.25.0",
    "websockets>=12.0",
    "base58>=2.1.1",
    "cryptography>=43.0.0",
    "dilithium-py>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/lobstercove/lichen"
Documentation = "https://developers.lichen.network"
"Bug Tracker" = "https://github.com/lobstercove/lichen/issues"

[tool.setuptools.packages.find]
include = ["lichen*"]
